2008-07-29  Bastien Nocera  <hadess@hadess.net>

	* sound-theme-file-utils.c (custom_theme_update_time):
	* sound-theme-file-utils.h:
	* sound-theme.c (save_custom_theme): "touch" the custom theme
	directory every time we make a change (Closes: #545373)

2008-07-29  Bastien Nocera  <hadess@hadess.net>

	* sound-theme.c (setup_sound_theme_custom): Never mind, the define is
	actually used

2008-07-29  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: Remove visual-bell.png, unused now

2008-07-29  Bastien Nocera  <hadess@hadess.net>

	* sound-theme.c: Remove unused define

2008-07-28  Jens Granseuer  <jensgr@gmx.net>

	* sound-theme.c: (get_sound_filename): fix critical warning when music
	directory isn't set

	* (setting_column_edited): fix more leaks

	* (theme_changed_custom_reinit): when resetting a theme, also reset
	the preview icon status

2008-07-28  Jens Granseuer  <jensgr@gmx.net>

	* sound-theme.c: (load_index_theme_name),
	(set_combox_for_theme_name), (theme_combobox_changed),
	(setup_sound_theme), (get_sound_filename), (dump_theme),
	(setting_column_edited), (setup_sound_theme_custom): plug some leaks,
	simplify and/or clarify some code

2008-07-28  Jens Granseuer  <jensgr@gmx.net>

	* sound-theme.c: (custom_treeview_button_press_event_cb): don't
	preview sounds for insensitive rows

2008-07-28  Bastien Nocera  <hadess@hadess.net>

	* sound-theme.c (setting_set_func), (fill_custom_model),
	(save_sounds), (count_customised_sounds), (setting_column_edited):
	When selecting a non-custom sound (such as disabled, or builtin),
	don't remove the previous custom file's filename from the tree store,
	When a custom file was previously selected, always show it in the
	combo box drop-down (Closes: #545055)

2008-07-28  Bastien Nocera  <hadess@hadess.net>

	* sound-theme.c (play_sound_preview), (get_sound_filename):
	When selecting custom files, listen to "update-preview", and try
	to play everything that the user might select (Closes: #545056)
