@@ -1,3 +1,13 @@
+2008-08-02  Jens Granseuer  <jensgr@gmx.net>
+
+	Based on a patch by: Alexander Schwenn <alesch@xelaris.net>
+
+	* sound-properties-capplet.c: (filter_device_generic),
+	(filter_device_alsa), (filter_device_oss),
+	(get_device_description), (device_added_alsa), (device_added_oss): add
+	some filtering for OSS devices and create more useful device
+	descriptions (bug #545275)
+
 2008-07-29  Bastien Nocera  <hadess@hadess.net>
 
 	* sound-theme-file-utils.c (custom_theme_update_time):
